@@ -7,6 +7,7 @@ dgm-lib v2.3.x
 	* `isTransparent` and `getClearColor` are no longer a virtual methods, they are replaced by `dgm::AppStateConfig`
 		* `isTransparent` was broken down into `shouldUpdateUnderlyingState` and `shouldDrawUnderlyingState` - first allows you to specify whether input and update methods should be executed for the state under top state. The second does the same for draw method. If multiple states are transparent in this way, the effect is applied recursively
 	* `dgm::AppState::restoreFocus` is not replaced with `restoreFocusImpl`. In addition, `loseFocusImpl` has been added. `dgm::AppState` also has a protected member `hasFocus` to test whether the state is currently the top one or not (only top state has focus). That one, one can test if they are updated because the state is on the top or because the currently top state is transparent.
+	* `dgm::App::popState` now accepts optional message parameter that is then passed down to `dgm::AppState::restoreStateImpl`
  * Reworked `dgm::Controller`
 	* Gamepad deadzones reworked
 	* Methods renamed
